added some bootstrap elements

--- a/blog/templates/post-list.html
+++ b/blog/templates/post-list.html
@@ -5,14 +5,13 @@
 {% block content %}
   <h1>My Blog</h1>
   {% for post in posts %}
-    <h2>
-      <a href="{% url 'blog:post_detail' post.id %}">
-        {{ post.title }}
-      </a>
-    </h2>
-    <p class="date">
+      <div class="jumbotron">
+    <h1 class="display-8">{{ post.title }}</h1>
+    <p class="lead date">
       Published {{ post.publish }} by {{ post.author }}
     </p>
-    {{ post.text|truncatewords:30|linebreaks }}
+    <p>{{ post.text|truncatewords:30|linebreaks }}</p>
+    <a class="btn btn-primary btn-large" href="{% url "blog:post_detail" post.id %}" role="button">full post</a>
+      </div>
   {% endfor %}
 {% endblock %}
