--- a/blog/templates/basic.html
+++ b/blog/templates/basic.html
@@ -1,18 +1,24 @@
+{% load bootstrap4 %}
 {% load static %}
 <!DOCTYPE html>
-<html>
-<head>
-  <title>{% block title %}{% endblock %}</title>
-  <link href="{% static "css/blog.css" %}" rel="stylesheet">
-</head>
-<body>
-  <div id="content">
-    {% block content %}
-    {% endblock %}
-  </div>
-  <div id="sidebar">
-    <h2>My blog</h2>
-    <p>This is my blog.</p>
-  </div>
-</body>
+<html lang="en">
+    <head>
+        <title>{% block title %}{% endblock %}</title>
+        <link href="{% static "css/blog.css" %}" rel="stylesheet">
+        {% bootstrap_css %}
+    </head>
+    <body>
+        <div class="container-fluid">
+            <div class="row">
+                <div id="content" class="col-8">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+                <div id="sidebar" class="col-4">
+                    <h2>My blog</h2>
+                    <p>This is my blog.</p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
