--- a/blog/templates/basic.html
+++ b/blog/templates/basic.html
@@ -17,6 +17,7 @@
         <div id="sidebar" class="col-4">
             <h2>My blog</h2>
             <p>This is my blog.</p>
+            <a href="{% url 'blog:create_post' %}" class="btn btn-primary btn-lg">Create a post</a>
         </div>
     </div>
 </div>
