--- a/blog/templates/includes/share_form.html
+++ b/blog/templates/includes/share_form.html
@@ -8,5 +8,5 @@
 <form action="{{ post.get_absolute_url }}" class="form" method="post">
     {% csrf_token %}
     {{ form }}
-    <button type="submit" class="btn btn-primary">Send</button>
+    <input type="submit" class="btn btn-primary">
 </form>
