added blog dirextory for templates

--- a/blog/templates/blog/post/post-create.html
+++ b/blog/templates/blog/post/post-create.html
@@ -1,4 +1,4 @@
-{% extends 'basic.html' %}
+{% extends 'blog/basic.html' %}
 
 {% block content %}
     <div class="container">
@@ -13,7 +13,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                {% include 'includes/success alert.html' %}
+                {% include 'includes/../includes/success alert.html' %}
             </div>
         </div>
     </div>
