--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -20,20 +20,34 @@ h2 {
     margin: 30px 30px 0 0;
 }
 
-#content {
-    padding: 0 0 0 30px;
-    font-family: "Agency FB", serif;
-}
-
 form {
     font-weight: normal;
     margin: 30px 0 0;
 }
 
+#content {
+    padding: 0 0 0 30px;
+    font-family: "Agency FB", serif;
+    font-size: large;
+}
+
+#header {
+    width: 100%;
+}
+
 #sidebar {
-    padding: 10px;
-    background: #efefef;
+    font-family: "Agency FB", serif;
+    background: linear-gradient(to right, blue, pink);
+    background-blend-mode: lighten;
     height: 100%;
+    flex: auto;
+
+}
+
+.link-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
 
 p.date {
