--- a/blog/templates/blog/post/post-detail.html
+++ b/blog/templates/blog/post/post-detail.html
@@ -1,4 +1,4 @@
-{% extends "basic.html" %}
+{% extends "blog/basic.html" %}
 {% load static %}
 
 {% block extra_css %}
@@ -7,7 +7,7 @@
 
 {% block title %}{{ post.title }}{% endblock %}
 {% block content %}
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12">
                 <h1>{{ post.title }}</h1>
