--- a/blog/templates/blog/post/post-list.html
+++ b/blog/templates/blog/post/post-list.html
@@ -1,8 +1,8 @@
-{% extends "basic.html" %}
+{% extends "blog/basic.html" %}
 
 {% block title %}My Blog{% endblock %}
 {% block content %}
-    <h1>My Blog</h1>
+    <h1>Recent Posts</h1>
     {% for post in posts %}
         <div class="jumbotron">
             <h1 class="display-8">{{ post.title }}</h1>
@@ -13,5 +13,5 @@
             <a class="btn btn-primary btn-large" href="{{ post.get_absolute_url }}" role="button">full post :)</a>
         </div>
     {% endfor %}
-    {% include "includes/paginator.html" with page=page_obj %}
+    {% include "blog/includes/paginator.html" with page=page_obj %}
 {% endblock %}
