--- a/blog/templates/blog/post/post-create.html
+++ b/blog/templates/blog/post/post-create.html
@@ -13,7 +13,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                {% include 'includes/../includes/success alert.html' %}
+                {% include 'blog/includes/success alert.html' %}
             </div>
         </div>
     </div>
