--- a/blog/templates/blog/post/post-create.html
+++ b/blog/templates/blog/post/post-create.html
@@ -1,10 +1,10 @@
 {% extends 'blog/basic.html' %}
 
 {% block content %}
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12">
-                <form class="form" action="" method="post">
+                <form class="form" method="post">
                     {% csrf_token %}
                     {{ form }}
                     <input type="submit" class="btn btn-success">
