--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -1,5 +1,6 @@
 {% load bootstrap4 %}
 {% load static %}
+{% load blog_extras %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +14,8 @@
         <div class="col-2" id="sidebar">
             <div class="container-fluid">
                 <h1>Side Bar</h1>
+                {% recent_posts %}
+                {% popular_posts %}
             </div>
         </div>
         <div class="col-10">
