--- a/blog/templates/blog/post/post-detail.html
+++ b/blog/templates/blog/post/post-detail.html
@@ -20,15 +20,18 @@
                 <a href="{% url 'blog:share_post' post.publish.year post.publish.month post.publish.day post.slug %}"
                    class="btn btn-primary">Share Post</a>
 
-                <h1>Similar posts:</h1>
-                {% for similar_post in similar_posts %}
-                    <div id="sim_post">
-                        <a href="{{ similar_post.get_absolute_url }}">{{ similar_post.title }}</a>
-                        <p>{{ similar_post.text|truncatewords:20|linebreaks|autocorrect }}</p>
-                    </div>
-                {% empty %}
-                    <p>there is no similar posts yet :)</p>
-                {% endfor %}
+                <div id="similar_posts">
+                    <h1>Similar posts:</h1>
+                    {% for similar_post in similar_posts %}
+                        <div id="sim_post">
+                            <a href="{{ similar_post.get_absolute_url }}">{{ similar_post.title }}</a>
+                            <p>{{ similar_post.text|truncatewords:20|linebreaks|autocorrect }}</p>
+                        </div>
+                    {% empty %}
+                        <p>there is no similar posts yet :)</p>
+                    {% endfor %}
+                </div>
+
 
                 {% include 'blog/includes/comment_form.html' %}
             </div>
