--- a/blog/templates/blog/post/post-list.html
+++ b/blog/templates/blog/post/post-list.html
@@ -2,21 +2,31 @@
 
 {% block title %}My Blog{% endblock %}
 {% block content %}
-    {% if tag %}
-        <h1>Results by {{ tag }} tag</h1>
-    {% else %}
-        <h1>Recent Posts</h1>
-    {% endif %}
-    {% for post in posts %}
-        <div class="jumbotron">
-            <h1 class="display-8">{{ post.title }}</h1>
-            {% include 'blog/includes/tag_list.html' %}
-            <p class="lead date">
-                Published {{ post.publish }} by {{ post.author }}
-            </p>
-            <p>{{ post.text|truncatewords:30|linebreaks }}</p>
-            <a class="btn btn-primary btn-large" href="{{ post.get_absolute_url }}" role="button">full post :)</a>
-        </div>
-    {% endfor %}
-    {% include "blog/includes/paginator.html" with page=page_obj %}
+    {% block tag_list %}
+        {% if tag %}
+            <h1>Results by {{ tag }} tag</h1>
+        {% else %}
+            <h1>Recent Posts</h1>
+        {% endif %}
+    {% endblock %}
+
+    {% block post_list %}
+        {% for post in posts %}
+            <div class="jumbotron">
+                <h1 class="display-8">{{ post.title }}</h1>
+                {% include 'blog/includes/tag_list.html' %}
+                <p class="lead date">
+                    Published {{ post.publish }} by {{ post.author }}
+                </p>
+                <p>{{ post.text|truncatewords:30|linebreaks }}</p>
+                {% block full_post_btn %}
+                    <a class="btn btn-primary btn-large" href="{{ post.get_absolute_url }}" role="button">full post</a>
+                {% endblock %}
+            </div>
+        {% endfor %}
+    {% endblock %}
+
+    {% block paginator %}
+        {% include "blog/includes/paginator.html" with page=page_obj %}
+    {% endblock %}
 {% endblock %}
