added user profile page, where user can change username, firstname, lastname and password

--- a/blog/templates/blog/includes/forms/search_form.html
+++ b/blog/templates/blog/includes/forms/search_form.html
@@ -1,6 +1,6 @@
 <form class="search_form" action="" method="get">
     {% csrf_token %}
-    <div class="input-group mb-3">
+    <div class="input-group mb-3" id="searchform">
         {{ search_form }}
         <input type="submit" value="search">
     </div>
