--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -22,7 +22,7 @@ h2 {
 
 form {
     font-weight: normal;
-    margin: 30px 0 0;
+    margin: 0;
 }
 
 #content {
@@ -42,9 +42,13 @@ form {
     height: fit-content;
 }
 
+#searchform {
+    margin: 11px 0 0 0;
+}
 
 .link-container {
     display: flex;
+    align-items: center;
     width: 100%;
     justify-content: space-between;
 }
