--- a/blog/templates/blog/includes/header.html
+++ b/blog/templates/blog/includes/header.html
@@ -2,8 +2,14 @@
 <a href="#" class="btn">Info</a>
 
 {% if request.user.is_authenticated %}
-    <a href="{% url 'blog:user_posts' request.user.username %}" class="btn">My Blog</a>
-    <a href="{% url 'users:logout' %}" class="btn">{{ request.user.username }} | Logout</a>
+    {% with username=request.user.username %}
+        <a href="{% url 'blog:user_posts' username %}" class="btn">My Blog</a>
+        <a href="{% url 'users:user_profile' %}" class="btn">{{ username }} Profile </a>
+        <form method="post" action="{% url 'users:logout' %}">
+            {% csrf_token %}
+            <button type="submit" class="btn" id="logout-btn">Logout</button>
+        </form>
+    {% endwith %}
 {% else %}
     <a href="{% url 'users:login' %}" class="btn">My Blog</a>
     <a href="{% url 'users:registration' %}" class="btn">Registration</a>
