--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -18,6 +18,9 @@
                     <input type="submit">
                 </form>
             </div>
+            <div class="col-12">
+                <a href="{% url 'users:reset_password' %}" class="btn btn-primary">Forgot my password</a>
+            </div>
         </div>
     </div>
 {% endblock %}
