--- a/users/templates/user/profile.html
+++ b/users/templates/user/profile.html
@@ -6,7 +6,7 @@
     <h1>My Profile</h1>
     <div class="row">
         <div class="col-12">
-            <a href="{% url 'users:password_change' %}" class="btn btn-primary">Change Password</a>
+            <a href="{% url 'users:change_password' %}" class="btn btn-primary">Change Password</a>
         </div>
     </div>
     <div class="row">
