added custom user model with possibility to add user avatar

--- a/users/templates/includes/user_form.html
+++ b/users/templates/includes/user_form.html
@@ -1,5 +1,9 @@
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
+
+    {{ form.avatar }}
+    {{ form.avatar.errors }}
+
     {{ form.username.label_tag }}
     {{ form.username }}
     {{ form.username.errors }}
@@ -11,6 +15,10 @@
     {{ form.last_name.label_tag }}
     {{ form.last_name }}
     {{ form.last_name.errors }}
+
+    {{ form.date_of_birth.label_tag }}
+    {{ form.date_of_birth }}
+    {{ form.date_of_birth.errors }}
 
     <input type="submit">
 </form>
