--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -46,6 +46,10 @@ form {
     margin: 11px 0 0 0;
 }
 
+#id_avatar {
+    margin: 15px 0 0 0;
+}
+
 .link-container {
     display: flex;
     align-items: center;
@@ -69,6 +73,12 @@ form.comment_form {
     margin: 40px 0;
     font-weight: bold;
 }
+
+.img-fluid {
+    max-width: 10%;
+    height: auto;
+}
+
 
 /* forms */
 label {
