--- a/users/templates/user/profile.html
+++ b/users/templates/user/profile.html
@@ -6,16 +6,20 @@
     <h1>My Profile</h1>
     <div class="row">
         <div class="col-12">
-            <a href="{% url 'users:change_password' %}" class="btn btn-primary">Change Password</a>
+            {% if user.avatar %}
+                <img src="{{ user.avatar.url }}" alt="user avatar" class="img-fluid">
+            {% endif %}
         </div>
     </div>
     <div class="row">
         <div class="col-12">
             {% include 'includes/user_form.html' %}
+
         </div>
     </div>
     <div class="row">
         <div class="col-12">
+            <a href="{% url 'users:change_password' %}" class="btn btn-primary">Change Password</a>
             {% include 'includes/success.html' %}
         </div>
     </div>
