--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -28,6 +28,16 @@
                 </div>
                 <div class="row">
                     <div id="content" class="col-12">
+                        {% if messages %}
+                            <ul class="messages">
+                                {% for message in messages %}
+                                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                                        {{ message|safe }}
+                                        <a href="#" class="close">x</a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
                         {% block content %}
                         {% endblock %}
                     </div>
