added authentication via facebook

--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -17,6 +17,15 @@
                     {{ form.as_p }}
                     <input type="submit">
                 </form>
+                <div class="social">
+                    <ul>
+                        <li class="facebook">
+                            <a href="{% url "social:begin" "facebook" %}">
+                                Sign in with Facebook
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="col-12">
                 <a href="{% url 'users:reset_password' %}" class="btn btn-primary">Forgot my password</a>
